updated styles, images, and intro page on website. Fixed typos

--- a/index.html
+++ b/index.html
@@ -41,33 +41,6 @@
         </div>
     </nav>
     <!-- Masthead-->
-    <div class="pt-10 text-center bg-primary text-white align-items-center ">
-        <div class="row align-items-center">
-            <div class="col-lg-4 mb-2 mb-lg-0 justify-content-center">
-                <h1 class="masthead-heading text-uppercase mb-0">Karan Khalsa</h1>
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                </div>
-                <p class="masthead-subheading font-weight-light mb-4 ">Aspiring Technical Program
-                    Manager - Mechanical Engineer</p>
-            </div>
-            <div class="col-lg-4 mb-2 mb-lg-0">
-                <img class="masthead-avatar2 mb-5" src="assets/img/profile_image.jpg" alt="" />
-            </div>
-            <div class="col-lg-4 mb-2 mb-lg-0 justify-content-center">
-                <p class="mb-0 justify-content-center">
-                    Hi, my name is Karan and I am a mechanical engineering graduate from University
-                    of Waterloo (2020). I am truely passinate about incubating new solutions
-                    (mechanical, software, business) to help companies strive towards The
-                    United Nations Sustainable Development Goals. Over the last 2 years, I have
-                    designed and pitched 3 green solutions for the automotive, and buildings sectors.
-                    Scroll down to find out more ...
-                </p>
-            </div>
-
-        </div>
-    </div>
-
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/profile_image.jpg" alt="" />
@@ -81,11 +54,11 @@
             <p class="masthead-subheading font-weight-light mb-4">Aspiring Technical Program
                 Manager - Mechanical Engineer</p>
             <p class="mb-4">
-                Hi, my name is Karan and I am mechanical engineering graduate from University
-                of Waterloo (2020). I am truely passinate about incubating new solutions
+                Hi, my name is Karan. I a am mechanical engineering graduate from the University
+                of Waterloo (2020). I am truly passionate about incubating new solutions
                 (mechanical, software, business) to help companies strive towards The
                 United Nations Sustainable Development Goals. Over the last 2 years, I have
-                designed and pitched 3 green solutions for the automotive, and buildings sectors.
+                designed and pitched 3 green solutions for the automotive, and building sectors.
                 Scroll down to find out more ...
             </p>
         </div>
@@ -111,7 +84,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/software1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/software1.1.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 2-->
@@ -122,7 +95,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/wonderbag1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/wonderbag1.1.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 3-->
@@ -133,7 +106,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/blitz1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/blitz1.1.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 4-->
@@ -144,7 +117,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/hult1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/hult1.1.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 5-->
@@ -155,7 +128,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/work1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/work1.1.png" alt="" />
                     </div>
                 </div>
                 <!-- Portfolio Item 6-->
@@ -166,7 +139,7 @@
                             <div class="portfolio-item-caption-content text-center text-white"><i
                                     class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/fitness1.png" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/fitness1.1.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -200,7 +173,7 @@
     </footer>
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
-        <div class="container"><small>Karan Khalsa</small></div>
+        <div class="container"><small>Karan Khalsa ©</small></div>
     </div>
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
     <div class="scroll-to-top d-lg-none position-fixed">
@@ -226,26 +199,26 @@
                                 <!-- Portfolio Modal - Image--><img class="img-fluid2 rounded mb-4"
                                     src="assets/img/portfolio/software2.jpg" alt="" /><!-- Portfolio Modal - Text-->
                                 <p class="mb-4">To expand my software skills toolbox, I have been taking online courses
-                                    as well as implementing software related solutions on my internship and school
+                                    as well as implementing software-related solutions on my internship and school
                                     projects. Some of my recent experiences include: </p>
                                 <ul class="portfolio-software-details">
                                     <li>
-                                        Full Stack Developer Course (Python, HTML, CSS, Flask, PostgreSQL) from
+                                        Thrived in the Full Stack Developer Course (Python, HTML, CSS, Flask,
+                                        PostgreSQL) from
                                         <a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd0044"
                                             target="_blank">Udacity</a>
                                     </li>
                                     <li>
-                                        Software Development Bootcamp from <a href="https://jrvs.ca/"
-                                            target="_blank">Jarvis
-                                            Consulting</a>
+                                        Participated in a Software Development Bootcamp from <a href="https://jrvs.ca/"
+                                            target="_blank">Jarvis Consulting</a>
                                     </li>
                                     <li>
-                                        Industrial IoT on Google Cloud Platform from <a
+                                        Completed the Industrial IoT on Google Cloud Platform from <a
                                             href="https://www.coursera.org/learn/iiot-google-cloud-platform"
                                             target="_blank">Coursera</a>
                                     </li>
                                     <li>
-                                        Data Structures & Algorithms Courses from <a
+                                        Excelled in a Data Structures & Algorithms Courses from the <a
                                             href="https://uwflow.com/course/bme122" target="_blank">University of
                                             Waterloo</a>
                                     </li>
@@ -254,11 +227,11 @@
                                             href="#portfolioModal3">capstone project</a>
                                     </li>
                                     <li>
-                                        At ARUP, I automated project intialization tasks (Python & VBA) to save 3
-                                        labour hours
+                                        At ARUP, I automated project initialization tasks (Python & VBA) to save 3
+                                        labor hours
                                     </li>
                                     <li>
-                                        At Tesla, I built a machine logger (Pythong & MySQL) to visulize machine status
+                                        At Tesla, I built a machine logger (Python & MySQL) to visualize machine status
                                         and history
                                     </li>
                                 </ul>
@@ -291,15 +264,16 @@
                                 <img class="img-fluid2 rounded mb-4" src="assets/img/portfolio/wonderbag2.jpg" alt="" />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-4"><a href="https://www.wonderbagworld.com/" target="_blank">Wonderbag</a>
-                                    is a NGO,
-                                    addressing the open fire cooking problem that
+                                    is an NGO, addressing the open fire cooking problem that
                                     releases large amounts of CO2, and jeopardizes the health of women and children.
                                     Wonderbag is a simple but revolutionary non-electric, portable slow cooker, that
-                                    uses clever insulation to allow food that has been brought to the boil to continue
+                                    uses clever insulation to allow food that has been brought to a boil to continue
                                     slow cooking or warm while in the bag.
                                 </p>
-                                <p class="mb-4"> I have been working with wonderbag to quantify, model, visualize the
-                                    CO2 emission reductions from mass adoption of their product. Currently we are in
+                                <p class="mb-4"> I have been working with wonderbag to quantify, model, and visualize
+                                    the
+                                    CO2 emission reductions from the mass adoption of their product. Currently, we are
+                                    in
                                     the model review process and intend to publish it as a dashboard on the wonderbag
                                     website soon after.
                                 </p>
@@ -330,9 +304,9 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid2 rounded mb-4" src="assets/img/portfolio/blitz2.jpg" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">As a part of my capstone project my teammates and I built an autonomous
-                                    electric vehile charging solution. The picture above showcases our intended final
-                                    product and the video below shows a working prototype.
+                                <p class="mb-4">As a part of my capstone project, my teammates and I built an autonomous
+                                    electric vehicle charging solution. The picture above showcases our intended final
+                                    product, while the video below shows a working prototype.
                                 </p>
                                 <!-- Portfolio Modal - Video-->
                                 <video width="320" height="240" controls>
@@ -388,10 +362,10 @@
                                 <p class="mb-4">In a group of four, our team developed and pitched a <a
                                         href="https://docs.google.com/presentation/d/1mf_4t4zAG76aE8WY4yBCbGtuMvJZGCSAAyUnh3Aqv8c/edit?usp=sharing"
                                         target="_blank">
-                                        community vertical farming social enterprise </a>. Our plan consisted of taking
-                                    advantage of the empty wasted space on condimium rooftops to build vertical farms
-                                    for the tentants. We pitched this idea to vertical farming companies and local
-                                    developers and recieved positive feedback from both sides.
+                                        community vertical farming social enterprise</a>. Our plan consisted of taking
+                                    advantage of the empty wasted space on condominium rooftops to build vertical farms
+                                    for the tenants. We pitched this idea to vertical farming companies and local
+                                    developers and received positive feedback from both sides.
                                 </p>
                                 <p class="mb-4">Team Members: Siya Agarwal, Ankita Mishra, Falah Shazib
                                 </p>
@@ -460,19 +434,31 @@
                                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"
                                     id="portfolioModal6Label">Cooking & Fitness</h2>
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid2 rounded mb-4" src="assets/img/portfolio/submarine.png" alt="" />
+                                <img class="img-fluid2 rounded mb-4" src="assets/img/portfolio/fitness2.jpg" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">Over the last 6 years I have enjoyed challenging my body to push its
-                                    boundaries. In this time have successfully gained 80 lbs and cut 50 lbs and now
-                                    continue to better myself. This continous cycle has thought the importance of
-                                    balance and grit, which helps me on a everyday basis.
+                                <p class="mb-4">Over the last 6 years, I have enjoyed challenging my body to push its
+                                    boundaries. During this time, I have successfully gained 80 lbs and cut 50 lbs and
+                                    now continue to better myself. This continuous cycle has thought me the importance
+                                    of balance and grit, which helps me on an everyday basis.
                                 </p>
-                                <p class="mb-4">During this time, I learned a lot nutrition and became passinate about
-                                    cooking. My most popular dish has to be my completely homemade pizza. In my spare
-                                    time, I contiously work to improve my pizza reciepe in the hopes to have my own
-                                    pizzeria someday.
+                                <p class="mb-4">During this time, I learned a lot about nutrition and became passionate
+                                    about cooking. My most popular dish has to be my completely homemade pizza. In my
+                                    spare time, I continuously work to improve my pizza recipe in the hopes to have my
+                                    own pizzeria someday.
                                 </p>
+                                <div class="row align-items-center justify-content-center">
+                                    <div class="col-lg-6 mb-5 mb-lg-0 justify-content-center">
+                                        <img class="img-fluid3 rounded mb-4" src="assets/img/portfolio/pizza2.jpg"
+                                            alt="" />
 
+                                    </div>
+
+                                    <div class="col-lg-6 mb-5 mb-lg-0 justify-content-center">
+                                        <img class="img-fluid3 rounded mb-4" src="assets/img/portfolio/pizza1.jpg"
+                                            alt="" />
+
+                                    </div>
+                                </div>
                                 <button class="btn btn-primary" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
                             </div>
