--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-4">Aspiring Technical Program
-                Manager - Mechanical Engineer</p>
+            <p class="masthead-subheading font-weight-light mb-4">Mechanical Engineer -> Business Problem Solver</p>
             <p class="mb-4">
-                Hi, my name is Karan. I a am mechanical engineering graduate from the University
+                Welcome! My name is Karan Khalsa, and I am a Senior Data & Business Analyst @ HelloFresh Canada. 
+                On paper I am an engineering graduate from the University
                 of Waterloo (2020). I am truly passionate about incubating new solutions
-                (mechanical, software, business) to help companies strive towards The
-                United Nations Sustainable Development Goals. Over the last 2 years, I have
-                designed and pitched 3 green solutions for the automotive, and building sectors.
-                Scroll down to find out more ...
+                for companies contributing to towards The United Nations Sustainable Development Goals. 
+                Over the last couple years, I have designed and pitched 3 green solutions for the 
+                automotive, and building sectors.
             </p>
+            <p class="mb-4"> Scroll down to find out more ...</p>
         </div>
     </header>
     <!-- Portfolio Section-->
@@ -198,10 +198,16 @@
                                     id="portfolioModal1Label">Software Development</h2>
                                 <!-- Portfolio Modal - Image--><img class="img-fluid2 rounded mb-4"
                                     src="assets/img/portfolio/software2.jpg" alt="" /><!-- Portfolio Modal - Text-->
-                                <p class="mb-4">To expand my software skills toolbox, I have been taking online courses
-                                    as well as implementing software-related solutions on my internship and school
-                                    projects. Some of my recent experiences include: </p>
+                                <p class="mb-4">To expand my software skills toolbox, I have been building software solution
+                                    at work and taking online courses. Some of my recent experiences include: </p>
                                 <ul class="portfolio-software-details">
+                                    <li>
+                                        Built a courier optimzier tool to find the cheapest courier for every input combination 
+                                        (Python, Databricks).
+                                    </li>
+                                    <li>
+                                        Automated over 400+ hours of yearly reporting for production, marketing, and product teams.
+                                    </li>
                                     <li>
                                         Thrived in the Full Stack Developer Course (Python, HTML, CSS, Flask,
                                         PostgreSQL) from
@@ -225,10 +231,6 @@
                                     <li>
                                         Led the machine learning perception development of my <a
                                             href="#portfolioModal3">capstone project</a>
-                                    </li>
-                                    <li>
-                                        At ARUP, I automated project initialization tasks (Python & VBA) to save 3
-                                        labor hours
                                     </li>
                                     <li>
                                         At Tesla, I built a machine logger (Python & MySQL) to visualize machine status
@@ -396,18 +398,24 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid2 rounded mb-4" src="assets/img/portfolio/work2.jpg" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-4">I have accumulated over 3 years of experience along with my undergrad. I
-                                    have worked in various roles in manufacturing, design, management, and consulting
-                                    engineering, at companies like Tesla, AECOM, ARUP, Royal Building Product, and
-                                    Northbrige Insurance.
+                                <p class="mb-4">I have had the oppurtunity to work at a handful of companies in my 
+                                    5+ years of experience (including internships). I have worked in various roles 
+                                    in data, manufacturing, design, management, and consulting, at companies like 
+                                    HelloFresh, Tesla, AECOM, ARUP, Royal Building Product, and Northbrige Insurance.
+                                </p>
+                                <p class="mb-4">I currently work @ HelloFresh Canada, as Senior Data & Business Analyst.
+                                    Starting as a Data Analsyt in Sept 2021, I quickly learned data wrangligng, 
+                                    data visulization, and story telling techniques and moved into a business problem
+                                    solver role. More details about my contributions can be found on my 
+                                    <a href="https://www.linkedin.com/in/khalsak/"
+                                    target="_blank">linkedin</a>.
                                 </p>
                                 <p class="mb-4">During my 16 months @ Tesla, I worked with multidisciplinary teams on
-                                    the Model 3, and Semi-Truck. As a part of the Model 3 battery team, I made
-                                    improvements to the manufacturing line to reduce downtime, and increase space. As a
-                                    part of the Model 3 flow team, I coordinated the implementation of new automation
-                                    stations, while reducing non-complinant product issues. As a part of the Semi-Truck
-                                    team, I reduced production time and created production layout roadmaps for the
-                                    upcoming production ramps.
+                                    the Model 3, and Semi-Truck. During this time I contributed to the production ramp of
+                                    the Model 3 from around 100 cars a week to over 1000 cars a week.
+                                    More details about my contributions can be found on my 
+                                    <a href="https://www.linkedin.com/in/khalsak/"
+                                    target="_blank">linkedin</a>.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close Window</button>
